--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 
     /* Main container padding with top margin instead of body padding */
     .main-section {
-      padding: 50px 15px 30px;
-      margin-top: 70px; /* space BELOW navbar */
+    padding: 50px 15px 30px;
+    margin-top: 42px; /* reduced from 70px */
     }
+
 
     /* Flex equal height row for top 3 columns */
     .equal-height-row {
