--- a/index.html
+++ b/index.html
@@ -194,14 +194,16 @@
       <div>
         <h3>Latest from our YouTube</h3>
         <div class="youtube-embed" style="flex-grow: 1;">
-          <iframe
-            src="https://www.youtube.com/embed?listType=user_uploads&list=footandballacademy"
-            title="YouTube channel feed"
-            frameborder="0"
-            allowfullscreen
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            style="height: 440px; width: 100%;">
-          </iframe>
+          <iframe 
+          width="100%" 
+          height="300" 
+          src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy" 
+          title="YouTube video feed" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+</iframe>
+
         </div>
       </div>
     </section>
