--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <div class="col-50" id="map-container">
         <h3 class="text-center mb-3">Find Us</h3>
-        <p class="text-center mb-4">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
+        <p class="text-center mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street Windsor, NSW 2756</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
