--- a/navbar.html
+++ b/navbar.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navBar">
       <ul class="navbar-nav mr-auto" style="font-family: 'Open Sans', sans-serif;">
         <li class="nav-item mx-2">
-          <a class="nav-link" href="help_im_new.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Help! I'm New</a>
+          <a class="nav-link" href="help.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Help! I'm New</a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link" href="OurPhilosophy.html" style="color: white;" onmouseover="this.style.color='#FFD700';" onmouseout="this.style.color='white';">Coaching Philosophy</a>
