--- a/index.html
+++ b/index.html
@@ -207,11 +207,34 @@
       </div>
     </section>
   </main>
+  
+  <!-- Footer Section Start -->
+<footer class="bg-dark text-white pt-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <h5>Foot and Ball Academy</h5>
+        <p>Educating young players with a global football philosophy.</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Contact</h5>
+        <p><i class="fas fa-envelope"></i> info@footandball.com</p>
+        <p><i class="fas fa-phone"></i> +61 400 123 456</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h5>Follow Us</h5>
+        <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+        <a href="#" class="text-white me-3"><i class="fab fa-youtube fa-lg"></i></a>
+        <a href="#" class="text-white"><i class="fab fa-instagram fa-lg"></i></a>
+      </div>
+    </div>
+    <div class="text-center py-3 border-top border-secondary">
+      &copy; 2025 Foot and Ball Academy.
+    </div>
+  </div>
+</footer>
+<!-- Footer Section End -->
 
-  <!-- Footer Section -->
-  <footer>
-    Football is the World Game. Foot and Ball Academy is proud to be a part of that.
-  </footer>
 
   <!-- JS Script includes: jQuery, Popper, Bootstrap, UIKit -->
   <script src="js/jquery-3.6.4.min.js"></script>
