--- a/index.html
+++ b/index.html
@@ -7,43 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foot and Ball Academy</title>
 
-  <!-- Stylesheets: Bootstrap, UIKit, and local main.css -->
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css" />
 
-  <!-- Inline styles for layout and specific components -->
+  <!-- Inline styles -->
   <style>
-    /* Body base styles */
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
       background-color: #f4f4f4;
-      /* padding-top removed to allow navbar to sit at very top */
     }
 
-    /* Main container padding with top margin instead of body padding */
     .main-section {
-    padding: 50px 15px 30px;
-    margin-top: 15px; /* reduced from 70px */
+      padding: 50px 15px 30px;
+      margin-top: 15px;
     }
 
-
-    /* Flex equal height row for top 3 columns */
-    .equal-height-row {
-      display: flex;
-      gap: 1.5rem;
-      margin-bottom: 60px; /* larger gap below */
-    }
-
-    /* Make columns flex children with column layout */
-    .equal-height-row > div {
-      background: transparent;
-      display: flex;
-      flex-direction: column;
-    }
-
-    /* Section card style */
     .section-card {
       background-color: #ffffff;
       padding: 20px;
@@ -55,78 +36,29 @@
       justify-content: center;
     }
 
-    /* Left and Right columns fixed width approx 25% */
-    .col-25 {
-      flex: 0 0 25%;
-      max-width: 25%;
-    }
-
-    /* Middle column approx 50% */
-    .col-50 {
-      flex: 1 1 50%;
-      max-width: 50%;
-    }
-
-    /* Map section: fill height of middle column */
-    #map-container {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    /* Make map iframe fill container nicely */
     #map-container iframe {
       width: 100% !important;
-      height: 550px !important; /* slightly taller */
+      height: 550px !important;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Bottom feeds section flex */
-    #feeds-section {
-      display: flex;
-      gap: 1.5rem;
-      margin-bottom: 60px;
-    }
-
-    #feeds-section > div {
-      flex: 1;
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      min-height: 480px; /* give feeds some good height */
-    }
-
-    #feeds-section h3 {
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-
-    /* Facebook and YouTube iframe styles */
     .fb-page,
     .youtube-embed iframe {
-      flex-grow: 1;
       width: 100% !important;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Our Mission button margin */
     .btn-register {
       margin-top: 15px;
     }
 
-    /* Footer smaller height */
     footer {
       background-color: #4274AD;
       color: white;
       text-align: center;
-      padding: 1.5rem 0; /* reduced from approx 3rem */
+      padding: 1.5rem 0;
       font-weight: 600;
       font-size: 1.25rem;
     }
@@ -134,15 +66,15 @@
 </head>
 
 <body>
-  <!-- Navbar placeholder - loaded dynamically via jQuery -->
+  <!-- Navbar -->
   <div id="nav-placeholder"></div>
 
-  <!-- Main container for page content -->
+  <!-- Main Content -->
   <main class="main-section container">
-    <!-- Top 3 columns row: Our Mission | Map | Meet Our Founder -->
-    <div class="equal-height-row">
-      <div class="col-25">
-        <div class="section-card text-center d-flex flex-column justify-content-center">
+    <!-- Top Row: Our Mission | Map | Meet Our Founder -->
+    <div class="row g-4 mb-5">
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="section-card text-center h-100">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
           <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
@@ -151,82 +83,85 @@
         </div>
       </div>
 
-      <div class="col-50" id="map-container">
-        <h3 class="text-center mb-3">Find Us</h3>
-        <p class="text-center mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street Windsor, NSW 2756</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="col-12 col-md-6 col-lg-6">
+        <div class="section-card text-center h-100">
+          <h3 class="mb-3">Find Us</h3>
+          <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </div>
 
-      <div class="col-25">
-        <div class="section-card text-center d-flex flex-column align-items-center justify-content-center">
+      <div class="col-12 col-md-12 col-lg-3">
+        <div class="section-card text-center h-100">
           <h3>Meet Our Founder</h3>
-          <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education
-            from around the world.</p>
+          <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
           <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
           <a target="_blank" href="Staff.html">
-            <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle"
-              style="max-width: 150px;" />
+            <img src="./img/nick.jpg" alt="Nick - Founder" class="img-fluid rounded-circle" style="max-width: 150px;" />
           </a>
         </div>
       </div>
     </div>
 
-    <!-- Bottom 2 feeds row: Facebook | YouTube -->
-    <section id="feeds-section">
-      <div>
-        <h3>Latest from our Facebook</h3>
-        <div class="fb-page"
-          data-href="https://www.facebook.com/footandball.academy"
-          data-tabs="timeline"
-          data-width="100%"
-          data-height="440"
-          data-small-header="true"
-          data-adapt-container-width="true"
-          data-hide-cover="true"
-          data-show-facepile="false">
-          <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
-            <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
-          </blockquote>
+    <!-- Bottom Row: Facebook | YouTube -->
+    <div class="row g-4">
+      <div class="col-12 col-md-6">
+        <div class="section-card h-100">
+          <h3 class="text-center mb-3">Latest from our Facebook</h3>
+          <div class="fb-page"
+            data-href="https://www.facebook.com/footandball.academy"
+            data-tabs="timeline"
+            data-width="100%"
+            data-height="440"
+            data-small-header="true"
+            data-adapt-container-width="true"
+            data-hide-cover="true"
+            data-show-facepile="false">
+            <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
+            </blockquote>
+          </div>
         </div>
       </div>
-      <div>
-        <h3>Latest from our YouTube</h3>
-        <div class="youtube-embed" style="flex-grow: 1;">
-         <iframe 
-            width="100%" 
-            height="300" 
-            src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy" 
-            title="YouTube video feed" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
+
+      <div class="col-12 col-md-6">
+        <div class="section-card h-100">
+          <h3 class="text-center mb-3">Latest from our YouTube</h3>
+          <div class="youtube-embed">
+            <iframe 
+              width="100%" 
+              height="300" 
+              src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy" 
+              title="YouTube video feed" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
   </main>
-  
-  <!-- Footer Section Start -->
+
+  <!-- Footer -->
   <div id="foot-placeholder"></div>
-<!-- Footer Section End -->
 
-
-  <!-- JS Script includes: jQuery, Popper, Bootstrap, UIKit -->
+  <!-- Scripts -->
   <script src="js/jquery-3.6.4.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
 
-  <!-- Facebook SDK root for Facebook feed plugin -->
+  <!-- Facebook SDK -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
     nonce="FBSDK"></script>
 
-  <!-- Load navbar and footer HTML dynamically -->
+  <!-- Dynamic navbar/footer loader -->
   <script>
     $(document).ready(function () {
       $("#nav-placeholder").load("navbar.html");
@@ -234,5 +169,4 @@
   </script>
 
 </body>
-
 </html>
