--- a/index.html
+++ b/index.html
@@ -36,13 +36,6 @@
       justify-content: center;
     }
 
-    #map-container iframe {
-      width: 100% !important;
-      height: 550px !important;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
     .fb-page,
     .youtube-embed iframe {
       width: 100% !important;
@@ -83,13 +76,19 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-6">
-        <div class="section-card text-center h-100">
-          <h3 class="mb-3">Find Us</h3>
+      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
+        <div class="text-center mb-3">
+          <h3 class="mb-2">Find Us</h3>
           <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
+        </div>
+        <div style="flex-grow:1;">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            style="width: 100%; height: 100%; min-height: 450px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); border: none;">
+          </iframe>
         </div>
       </div>
 
