--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Top Row: Our Mission | Map | Meet Our Founder -->
     <div class="row g-4 mb-5">
       <div class="col-12 col-md-6 col-lg-3">
-        <div class="section-card text-center h-100">
+        <div class="section-card text-center h-100 mb-4 mb-lg-0">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
           <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
@@ -77,11 +77,11 @@
       </div>
 
       <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
-        <div class="text-center mb-3">
+        <div class="text-center mb-3 mb-4 mb-lg-0">
           <h3 class="mb-2">Find Us</h3>
           <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
         </div>
-        <div style="flex-grow:1;">
+        <div style="flex-grow:1;" class="mb-4 mb-lg-0">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
             allowfullscreen=""
@@ -93,7 +93,7 @@
       </div>
 
       <div class="col-12 col-md-12 col-lg-3">
-        <div class="section-card text-center h-100">
+        <div class="section-card text-center h-100 mb-4 mb-lg-0">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
           <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
