--- a/index.html
+++ b/index.html
@@ -2,43 +2,31 @@
 <html lang="en">
 
 <head>
-  <!-- Meta and title -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Foot and Ball Academy</title>
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/uikit.min.css" />
-  <link rel="stylesheet" href="css/main.css" />
-
-  <!-- Inline styles -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.12/dist/css/uikit.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="main.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
       background-color: #f4f4f4;
     }
 
-    .main-section {
-      padding: 50px 15px 30px;
-      margin-top: 15px;
-    }
-
     .section-card {
-      background-color: #ffffff;
-      padding: 20px;
+      background-color: white;
       border-radius: 10px;
+      padding: 20px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
 
-    .fb-page,
-    .youtube-embed iframe {
-      width: 100% !important;
+    #map-section iframe {
+      width: 100%;
+      height: 100%;
+      min-height: 450px;
+      border: none;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
@@ -47,27 +35,48 @@
       margin-top: 15px;
     }
 
-    footer {
-      background-color: #4274AD;
-      color: white;
-      text-align: center;
-      padding: 1.5rem 0;
-      font-weight: 600;
-      font-size: 1.25rem;
+    /* === Responsive spacing fixes per your feedback === */
+
+    /* MOBILE: Bring Our Mission closer to navbar */
+    @media (max-width: 575.98px) {
+      .our-mission-wrapper {
+        margin-top: 0.25rem !important; /* ~4px */
+      }
+
+      /* Add spacing between Our Mission and Find Us stacked vertically */
+      .find-us-wrapper {
+        margin-top: 1.5rem !important; /* increase space */
+      }
+
+      /* Add bottom margin on feed blocks for breathing */
+      .feed-block {
+        margin-bottom: 1.5rem !important;
+      }
     }
+
+    /* TABLET: Add vertical spacing between Our Mission and Meet Our Founder when stacked */
+    @media (min-width: 576px) and (max-width: 991.98px) {
+      /* When columns stack as two columns, Meet Our Founder sits below Our Mission */
+      .meet-founder-wrapper {
+        margin-top: 1.5rem !important;
+      }
+      /* Ensure some spacing between Our Mission and Find Us remains */
+      .find-us-wrapper {
+        margin-top: 0 !important;
+      }
+    }
+
   </style>
 </head>
 
 <body>
-  <!-- Navbar -->
   <div id="nav-placeholder"></div>
 
-  <!-- Main Content -->
-  <main class="main-section container">
-    <!-- Top Row: Our Mission | Map | Meet Our Founder -->
+  <main class="container mt-4">
     <div class="row g-4 mb-5">
-      <div class="col-12 col-md-6 col-lg-3">
-        <div class="section-card text-center h-100 mb-4 mb-lg-0">
+
+      <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper" style="margin-top: 0.5rem;">
+        <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
           <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
@@ -76,24 +85,21 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center">
-        <div class="text-center mb-3 mb-4 mb-lg-0">
-          <h3 class="mb-2">Find Us</h3>
+      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center find-us-wrapper" style="margin-top: 1rem;">
+        <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
+          <h3 class="mb-3">Find Us</h3>
           <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
-        </div>
-        <div style="flex-grow:1;" class="mb-4 mb-lg-0">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-            style="width: 100%; height: 100%; min-height: 450px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); border: none;">
-          </iframe>
+          <div style="flex-grow:1;">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="width:100%; height:100%; min-height:450px; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+            </iframe>
+          </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-12 col-lg-3">
-        <div class="section-card text-center h-100 mb-4 mb-lg-0">
+      <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper" style="margin-top: 0;">
+        <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
           <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
@@ -102,70 +108,48 @@
           </a>
         </div>
       </div>
+
     </div>
 
-    <!-- Bottom Row: Facebook | YouTube -->
-    <div class="row g-4">
+    <div class="row g-4 mb-5">
       <div class="col-12 col-md-6">
-        <div class="section-card h-100">
-          <h3 class="text-center mb-3">Latest from our Facebook</h3>
-          <div class="fb-page"
-            data-href="https://www.facebook.com/footandball.academy"
-            data-tabs="timeline"
-            data-width="100%"
-            data-height="440"
-            data-small-header="true"
-            data-adapt-container-width="true"
-            data-hide-cover="true"
-            data-show-facepile="false">
-            <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
-              <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
-            </blockquote>
+        <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block">
+          <h3>YouTube</h3>
+          <div class="ratio ratio-16x9">
+            <iframe src="https://www.youtube.com/embed/some-video-id" title="YouTube video" allowfullscreen></iframe>
           </div>
         </div>
       </div>
-
       <div class="col-12 col-md-6">
-        <div class="section-card h-100">
-          <h3 class="text-center mb-3">Latest from our YouTube</h3>
-          <div class="youtube-embed">
-            <iframe 
-              width="100%" 
-              height="300" 
-              src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy" 
-              title="YouTube video feed" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-              allowfullscreen>
-            </iframe>
+        <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block">
+          <h3>Facebook</h3>
+          <div class="fb-page" data-href="https://www.facebook.com/your-page" data-tabs="timeline" data-width=""
+            data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
+            data-show-facepile="true">
+            <blockquote cite="https://www.facebook.com/your-page" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/your-page">Facebook</a>
+            </blockquote>
           </div>
         </div>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer Section Start -->
   <div id="foot-placeholder"></div>
+  <!-- Footer Section End -->
 
-  <!-- Scripts -->
-  <script src="js/jquery-3.6.4.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/uikit.min.js"></script>
-  <script src="js/uikit-icons.min.js"></script>
-
-  <!-- Facebook SDK -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
-    nonce="FBSDK"></script>
-
-  <!-- Dynamic navbar/footer loader -->
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="XxXxXx"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    $(document).ready(function () {
+    $(function () {
       $("#nav-placeholder").load("navbar.html");
+      $("#foot-placeholder").load("footer.html");
     });
   </script>
-
 </body>
+
 </html>
