--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.12/dist/css/uikit.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <style>
+    /* Ensure body padding to avoid navbar toggler being blocked */
     body {
       background-color: #f4f4f4;
+      padding-top: 56px; /* Height of fixed navbar */
+    }
+
+    /* Navbar fixed on top with high z-index */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1030;
     }
 
     .section-card {
@@ -22,6 +32,7 @@
       height: 100%;
     }
 
+    /* Map iframe styling */
     #map-section iframe {
       width: 100%;
       height: 100%;
@@ -31,51 +42,79 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
+    /* Button margin */
     .btn-register {
       margin-top: 15px;
     }
 
-    /* === Responsive spacing fixes per your feedback === */
+    /* Footer styling overrides to fix font size and appearance */
+    footer {
+      background-color: #4274AD;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 0;
+      font-weight: 600;
+      font-size: 1.25rem;
+      margin: 0;
+    }
 
-    /* MOBILE: Bring Our Mission closer to navbar */
+    /* Responsive spacing fixes */
+
+    /* MOBILE (<576px) */
     @media (max-width: 575.98px) {
       .our-mission-wrapper {
-        margin-top: 0.25rem !important; /* ~4px */
+        margin-top: 1rem !important; /* give breathing so navbar toggler clickable */
       }
 
-      /* Add spacing between Our Mission and Find Us stacked vertically */
       .find-us-wrapper {
-        margin-top: 1.5rem !important; /* increase space */
+        margin-top: 1.5rem !important;
       }
 
-      /* Add bottom margin on feed blocks for breathing */
+      .meet-founder-wrapper {
+        margin-top: 1.5rem !important;
+      }
+
       .feed-block {
         margin-bottom: 1.5rem !important;
       }
     }
 
-    /* TABLET: Add vertical spacing between Our Mission and Meet Our Founder when stacked */
+    /* TABLET (≥576px and <992px) */
     @media (min-width: 576px) and (max-width: 991.98px) {
-      /* When columns stack as two columns, Meet Our Founder sits below Our Mission */
+      .our-mission-wrapper,
       .meet-founder-wrapper {
         margin-top: 1.5rem !important;
       }
-      /* Ensure some spacing between Our Mission and Find Us remains */
+
       .find-us-wrapper {
-        margin-top: 0 !important;
+        margin-top: 0 !important; /* directly below Our Mission */
+      }
+
+      .feed-block {
+        margin-bottom: 0 !important;
       }
     }
 
+    /* DESKTOP (≥992px) */
+    @media (min-width: 992px) {
+      .our-mission-wrapper,
+      .meet-founder-wrapper,
+      .find-us-wrapper,
+      .feed-block {
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
+      }
+    }
   </style>
 </head>
 
 <body>
+  <!-- Navbar placeholder -->
   <div id="nav-placeholder"></div>
 
   <main class="container mt-4">
     <div class="row g-4 mb-5">
-
-      <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper" style="margin-top: 0.5rem;">
+      <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
@@ -85,20 +124,21 @@
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center find-us-wrapper" style="margin-top: 1rem;">
+      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center find-us-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3 class="mb-3">Find Us</h3>
           <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
           <div style="flex-grow:1;">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
-              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" style="width:100%; height:100%; min-height:450px; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+              style="width:100%; height:100%; min-height:450px; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
             </iframe>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper" style="margin-top: 0;">
+      <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
@@ -108,26 +148,26 @@
           </a>
         </div>
       </div>
-
     </div>
 
     <div class="row g-4 mb-5">
       <div class="col-12 col-md-6">
         <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block">
-          <h3>YouTube</h3>
+          <h3>Latest from our YouTube</h3>
           <div class="ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/some-video-id" title="YouTube video" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy"
+              title="YouTube video feed" allowfullscreen></iframe>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-6">
         <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block">
-          <h3>Facebook</h3>
-          <div class="fb-page" data-href="https://www.facebook.com/your-page" data-tabs="timeline" data-width=""
-            data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-            data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/your-page" class="fb-xfbml-parse-ignore">
-              <a href="https://www.facebook.com/your-page">Facebook</a>
+          <h3>Latest from our Facebook</h3>
+          <div class="fb-page" data-href="https://www.facebook.com/footandball.academy" data-tabs="timeline" data-width=""
+            data-height="440" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true"
+            data-show-facepile="false">
+            <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
             </blockquote>
           </div>
         </div>
@@ -141,9 +181,11 @@
 
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="XxXxXx"></script>
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="FBSDK"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/uikit.min.js"></script>
+  <script src="js/uikit-icons.min.js"></script>
   <script>
     $(function () {
       $("#nav-placeholder").load("navbar.html");
