--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       background-color: #f4f4f4;
-      padding-top: 70px; /* Ensure content starts below fixed navbar */
+      padding-top: 70px;
     }
     .section-card {
       background: white;
@@ -24,29 +24,21 @@
     .fb-page iframe {
       width: 100% !important;
     }
-    .footer h4 {
-      font-size: 1.25rem;
-    }
-    @media (max-width: 992px) {
-      .find-us-wrapper {
-        margin-top: 20px;
-      }
-    }
     @media (max-width: 768px) {
-      .our-mission-wrapper {
+      .col-12:first-child {
         margin-top: 10px;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Navbar Placeholder -->
+  <!-- Navbar -->
   <div id="nav-placeholder"></div>
 
-  <section class="container mt-3" id="main-section">
+  <main class="container mt-3">
     <div class="row g-3">
       <!-- Our Mission -->
-      <div class="col-lg-4 col-md-6 col-12 our-mission-wrapper">
+      <div class="col-lg-4 col-md-6 col-12">
         <div class="section-card">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
@@ -56,20 +48,21 @@
         </div>
       </div>
 
-      <!-- Find Us -->
-      <div class="col-lg-4 col-md-6 col-12 find-us-wrapper">
+      <!-- Facebook Feed -->
+      <div class="col-lg-4 col-md-6 col-12">
         <div class="section-card">
-          <h3>Find Us</h3>
-          <div style="width: 100%">
-            <iframe
-              width="100%"
-              height="250"
-              frameborder="0"
-              scrolling="no"
-              marginheight="0"
-              marginwidth="0"
-              src="https://maps.google.com/maps?q=Sydney&t=&z=13&ie=UTF8&iwloc=&output=embed"
-            ></iframe>
+          <h3>Follow Us</h3>
+          <div class="fb-page" 
+               data-href="https://www.facebook.com/facebook" 
+               data-tabs="timeline" 
+               data-height="400" 
+               data-small-header="false" 
+               data-adapt-container-width="true" 
+               data-hide-cover="false" 
+               data-show-facepile="true">
+            <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/facebook">Facebook</a>
+            </blockquote>
           </div>
         </div>
       </div>
@@ -96,26 +89,23 @@
         </div>
       </div>
 
-      <!-- Facebook Feed -->
-      <div class="col-lg-6 col-md-6 col-12 d-flex">
-        <div class="section-card flex-grow-1 w-100">
-          <h3>Follow Us</h3>
-          <div class="fb-page" 
-               data-href="https://www.facebook.com/facebook" 
-               data-tabs="timeline" 
-               data-height="400" 
-               data-small-header="false" 
-               data-adapt-container-width="true" 
-               data-hide-cover="false" 
-               data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
-              <a href="https://www.facebook.com/facebook">Facebook</a>
-            </blockquote>
-          </div>
+      <!-- Find Us -->
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="section-card">
+          <h3>Find Us</h3>
+          <iframe
+            width="100%"
+            height="250"
+            frameborder="0"
+            scrolling="no"
+            marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?q=Sydney&t=&z=13&ie=UTF8&iwloc=&output=embed"
+          ></iframe>
         </div>
       </div>
     </div>
-  </section>
+  </main>
 
   <!-- Footer -->
   <div id="foot-placeholder"></div>
@@ -124,7 +114,7 @@
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
   <script>
     $(function () {
