--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       padding-top: 80px; /* Increased for more gap on desktop & tablet */
     }
 
+    .top-row {
+  margin-top: 3rem; /* Adjust this value to your liking */
+    }
+
     /* Fixed navbar styles with z-index */
     .navbar {
       position: fixed;
@@ -148,7 +152,7 @@
 
   <main class="container mt-4">
     <!-- Top section with three columns -->
-    <div class="row g-4 mb-5">
+    <div class="row g-4 mb-5 top-row">
       <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
