--- a/index.html
+++ b/index.html
@@ -112,15 +112,14 @@
       }
     }
 
-    /* TABLET (≥576px and <992px) */
+   /* TABLET (≥576px and <992px) */
 @media (min-width: 576px) and (max-width: 991.98px) {
-  /* Keep your existing margin-top and margin-bottom adjustments */
-  .our-mission-wrapper {
-    margin-top: 1.5rem !important; /* space below navbar only for Our Mission */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* or flex-start if you want top alignment */
+  .our-mission-wrapper,
+  .founder-wrapper,
+  .map-wrapper {
+    margin-top: 2rem !important; /* consistent top margin for alignment */
   }
+}
 
   /* Find Us stacked below Our Mission, no margin-top */
   .find-us-wrapper {
