--- a/index.html
+++ b/index.html
@@ -72,4 +72,43 @@
     <!-- YouTube + Find Us Row -->
     <div class="row g-4 mb-5">
       <div class="col-lg-6 col-md-6">
-        <div class="sec
+        <div class="section-card">
+          <h3>Our YouTube</h3>
+          <div class="youtube-embed">
+            <iframe src="https://www.youtube.com/embed/your-video-id" title="YouTube video" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-6">
+        <div class="section-card">
+          <h3>Find Us</h3>
+          <div class="ratio ratio-4x3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div id="foot-placeholder"></div>
+
+  <!-- Facebook SDK -->
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"></script>
+
+  <!-- jQuery + Dynamic Navbar/Footer -->
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script>
+    $(function () {
+      $("#nav-placeholder").load("nav.html");
+      $("#foot-placeholder").load("footer.html");
+    });
+  </script>
+
+  <!-- Bootstrap & UIKit -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.3/dist/js/uikit.min.js"></script>
+</body>
+</html>
