--- a/register.html
+++ b/register.html
@@ -2,112 +2,148 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:image" content="https://footandball.com.au/img/favicon.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="stylesheet" type="text/css" href="css/uikit.min.css" />
+  <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css" />
+  <title>Foot and Ball Academy</title>
+  <style>
+    #about {
+      background: url('img/academy.jpg') center center/cover no-repeat;
+      position: relative;
+    }
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:image" content="https://footandball.com.au/img/favicon.png" />
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-	<title>Foot and Ball Academy</title>
+    #about .inner-overlay {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 60px 0;
+    }
+
+    .card {
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+    }
+
+    .card-title {
+      font-size: 1.25rem;
+      font-weight: 600;
+    }
+
+    .btn-info {
+      border-radius: 50px;
+    }
+
+    @media (max-width: 768px) {
+      #foot-placeholder {
+        margin-top: 60px;
+      }
+    }
+
+    @media (max-width: 576px) {
+      .btn-info {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-	<!-- Nav Section Start -->
-	<div id="nav-placeholder"></div>
-	<!-- Nav Section End -->
+  <!-- Nav Section Start -->
+  <div id="nav-placeholder"></div>
+  <!-- Nav Section End -->
 
-	<!-- About Section Start -->
-	<section id="about" class="text-center py-5 text-light">
-		<div class="inner-overlay">
-			<div class="container">
-				<div class="row">
-					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Register</h1>
-						<p class="lead">
-							Register for one of our programs below.
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Section End -->
+  <!-- About Section Start -->
+  <section id="about" class="text-center text-light">
+    <div class="inner-overlay">
+      <div class="container">
+        <div class="row">
+          <div class="col mt-5 pt-4">
+            <h1 class="text-light">Register</h1>
+            <p class="lead">Register for one of our programs below.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- About Section End -->
 
-	<!-- Info Section Start -->
-	<section id="about-info">
-		<!-- <div class="iframe-container"> -->
+  <!-- Info Section Start -->
+  <section id="about-info">
+    <div class="container py-5">
+      <div class="row g-4">
 
-		<div class="container p-5">
-			
-			<div class="row">
-					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
-					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank">
-						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">July 2025 Holidays (OPEN)</h2>
-							<p class="card-text">Register Now</p>
-							<a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank"
-   							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
-   							Register Now
-							</a>
-						</div>
-					</div>
-				</div>
+        <div class="col-md-4 col-12 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank">
+              <img src="img/hols.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Holiday Program">
+            </a>
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">July 2025 Holidays (OPEN)</h2>
+              <p class="card-text">Register Now</p>
+              <a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
 
-					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
-					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/xmXftTU5w9" target="_blank">
-						<img src="img/term_winter_enrollment.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 3, 2025 (OPEN)</h2>
-							<p class="card-text">Starting July 21st, 2025, click below </p>
-							<a href="https://forms.office.com/r/xmXftTU5w9" target="_blank" 
-							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
-							Register Now</a>
-						</div>
-					</div>
-				</div> 
-				<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
-					<div class="card text-center" style="width:100%">
-						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
-						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">1-on-1 Sessions</h2>
-							<p class="card-text">Consult one of our coaches first <a href="PrivateSessions.html" 
-									class="link-secondary">Read more...</a></p>
-							<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank"
-   							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
-   							Register Now
-							</a>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</div>
+        <div class="col-md-4 col-12 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <a href="https://forms.office.com/r/xmXftTU5w9" target="_blank">
+              <img src="img/term_winter_enrollment.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Term 3 Program">
+            </a>
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">Term 3, 2025 (OPEN)</h2>
+              <p class="card-text">Starting July 21st, 2025, click below</p>
+              <a href="https://forms.office.com/r/xmXftTU5w9" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
 
+        <div class="col-md-4 col-12 d-flex align-items-stretch">
+          <div class="card text-center w-100">
+            <img src="img/stock6.jpg" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="1-on-1 Sessions">
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title">1-on-1 Sessions</h2>
+              <p class="card-text">
+                Consult one of our coaches first
+                <a href="PrivateSessions.html" class="link-secondary">Read more...</a>
+              </p>
+              <a href="https://forms.office.com/r/v87P9vk9n0" target="_blank" class="btn btn-info mt-auto">
+                Register Now
+              </a>
+            </div>
+          </div>
+        </div>
 
-		<!-- </div> -->
-	</section>
-	<!-- About Info Section End -->
+      </div>
+    </div>
+  </section>
+  <!-- About Info Section End -->
 
+  <!-- Footer Section Start -->
+  <div id="foot-placeholder" style="margin-top: 20vh;"></div>
+  <!-- Footer Section End -->
 
-	<!-- Footer Section Start -->
-	<div id="foot-placeholder" style="margin-top: 20vh;"></div>
-	<!-- Footer Section Start -->
-
-	<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/uikit.min.js"></script>
-	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
-	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
-
+  <script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/uikit.min.js"></script>
+  <script type="text/javascript" src="js/uikit-icons.min.js"></script>
+  <script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
+  <script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
 
 </body>
 
