--- a/register.html
+++ b/register.html
@@ -77,7 +77,7 @@
       <div class="row g-4">
 
         <!--
-        <div class="col-md-6 col-12 d-flex align-items-stretch">
+        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank">
               <img src="img/hols.website.banner.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Holiday Program">
@@ -93,7 +93,7 @@
         </div>
         -->
 
-        <div class="col-md-6 col-12 d-flex align-items-stretch">
+        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <a href="https://forms.office.com/r/xmXftTU5w9" target="_blank">
               <img src="img/term_winter_enrollment.png" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="Term 3 Program">
@@ -108,13 +108,15 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-12 d-flex align-items-stretch">
+        <div class="col-md-6 col-12 mb-4 d-flex align-items-stretch">
           <div class="card text-center w-100">
             <img src="img/stock6.jpg" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="1-on-1 Sessions">
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">Private Sessions</h2>
+              <h2 class="card-title">1-on-1 Sessions</h2>
               <p class="card-text">
-                Consult Nick first | P: 0452 583 279</p>
+                Consult one of our coaches first
+                <a href="PrivateSessions.html" class="link-secondary">Read more...</a>
+              </p>
               <a href="https://forms.office.com/r/v87P9vk9n0" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
