--- a/index.html
+++ b/index.html
@@ -239,12 +239,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
-  <script>
-    $(function () {
-      $("#nav-placeholder").load("navbar.html");
-      $("#foot-placeholder").load("footer.html");
+<script>
+  $(function () {
+    $("#nav-placeholder").load("navbar.html", function () {
+      // Re-initialize dropdowns after navbar is loaded
+      document.querySelectorAll('.dropdown-toggle').forEach(function (el) {
+        new bootstrap.Dropdown(el);
+      });
     });
-  </script>
+
+    $("#foot-placeholder").load("footer.html");
+  });
+</script>
 </body>
 
 </html>
