--- a/index.html
+++ b/index.html
@@ -239,18 +239,20 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
-<script>
+  <script>
   $(function () {
     $("#nav-placeholder").load("navbar.html", function () {
-      // Re-initialize dropdowns after navbar is loaded
-      document.querySelectorAll('.dropdown-toggle').forEach(function (el) {
-        new bootstrap.Dropdown(el);
-      });
+      // Delay to ensure DOM is ready
+      setTimeout(function () {
+        document.querySelectorAll('.dropdown-toggle').forEach(function (el) {
+          new bootstrap.Dropdown(el);
+        });
+      }, 100); // 100ms delay
     });
 
     $("#foot-placeholder").load("footer.html");
   });
-</script>
+  </script>
 </body>
 
 </html>
